--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.3.2",
     "jquery": "^3.4.1",
     "register-service-worker": "^1.6.2",
+    "sweetalert": "^2.1.2",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
