--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "jquery": "^3.4.1",
     "register-service-worker": "^1.6.2",
     "sweetalert": "^2.1.2",
+    "toastr": "^2.1.4",
     "vue": "^2.6.10",
     "vue-router": "^3.1.3"
   },
