--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "dependencies": {
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
+    "express": "^4.17.1",
     "jquery": "^3.4.1",
+    "path": "^0.12.7",
     "register-service-worker": "^1.6.2",
+    "serve-static": "^1.14.1",
     "sweetalert": "^2.1.2",
     "toastr": "^2.1.4",
     "vue": "^2.6.10",
